[package]
name = "TiangZ"
version = "0.1.0"
edition = "2021"
authors = [
    "moulo <25897084@qq.com>",
]

keywords = [
    "tz",
    "tianz",
    "game",
    "server",
]

license = "MIT + Apache-2.0"

[dependencies]
gen_macro = {path="./gen_macro"}

thiserror = "2"
crossbeam = "0.8"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
inventory = "0.3"
lazy_static = "1.5"
simd-json = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["time"] }
bytes = "1"
criterion = "0.5"
dashmap = "6.0"
rand = "0.9"
async_once = "0.2"
clap = { version = "4.5.37", features = ["derive"] }
async-trait = "0.1.88"
num_cpus = "1.0"
core_affinity = "0.8.3"
once_cell = "1.18"
futures = "0.3.31"
tokio_kcp = "0.9.8"
#kcp-rust-native = "0.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32", "Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.29"  # 用于与Linux系统交互

[build-dependencies]
rayon = "1.10"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
codegen-units = 1  
debug = true


