[package]
name = "gen_macro"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0.64"

[dependencies]
quote = "1.0.21"
syn = { version = "2.0.23", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.66"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.17.1"
rmp-serde = "1.1.1"
inventory = "0.3.5"